[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lobsim"
version = "0.1.0"
description = "Limit-order-book exchange simulator. Trading agents compete in a matching engine; market prices emerge from their interactions. Includes replay tools that explain why specific orders won or lost."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Deshna Kankaria" }]
dependencies = ["sortedcontainers>=2.4.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "hypothesis>=6.100.0", "ruff>=0.6.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]